--- a/nltk-stop-words/statistical-method.ipynb
+++ b/nltk-stop-words/statistical-method.ipynb
@@ -388,358 +388,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 145,
-   "id": "1edafa4b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>word</th>\n",
-       "      <th>frequency</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>في</td>\n",
-       "      <td>356927</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>من</td>\n",
-       "      <td>286652</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>على</td>\n",
-       "      <td>172219</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>أن</td>\n",
-       "      <td>146083</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>إلى</td>\n",
-       "      <td>99920</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>التي</td>\n",
-       "      <td>80677</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>عن</td>\n",
-       "      <td>67941</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>لا</td>\n",
-       "      <td>65888</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>ما</td>\n",
-       "      <td>65712</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>أو</td>\n",
-       "      <td>54998</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>مع</td>\n",
-       "      <td>54531</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>الذي</td>\n",
-       "      <td>52694</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>هذا</td>\n",
-       "      <td>45318</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>هذه</td>\n",
-       "      <td>38376</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>كان</td>\n",
-       "      <td>37159</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>لم</td>\n",
-       "      <td>33351</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>كل</td>\n",
-       "      <td>33264</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>ذلك</td>\n",
-       "      <td>31759</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>هو</td>\n",
-       "      <td>31138</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>بين</td>\n",
-       "      <td>30919</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>بعد</td>\n",
-       "      <td>26840</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>فى</td>\n",
-       "      <td>23190</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>كانت</td>\n",
-       "      <td>21786</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>ولا</td>\n",
-       "      <td>21714</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>العالم</td>\n",
-       "      <td>21173</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>كما</td>\n",
-       "      <td>20831</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>حتى</td>\n",
-       "      <td>19547</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>غير</td>\n",
-       "      <td>18547</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>قبل</td>\n",
-       "      <td>17967</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>الله</td>\n",
-       "      <td>17652</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>أي</td>\n",
-       "      <td>17587</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>هي</td>\n",
-       "      <td>17029</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>قد</td>\n",
-       "      <td>16971</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>وهو</td>\n",
-       "      <td>16925</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>إيران</td>\n",
-       "      <td>16193</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>خلال</td>\n",
-       "      <td>16113</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>إن</td>\n",
-       "      <td>16059</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>أنه</td>\n",
-       "      <td>15933</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>تلك</td>\n",
-       "      <td>15435</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>أكثر</td>\n",
-       "      <td>15398</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>بل</td>\n",
-       "      <td>15142</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>عام</td>\n",
-       "      <td>14195</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>له</td>\n",
-       "      <td>14122</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>لكن</td>\n",
-       "      <td>13986</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>إلا</td>\n",
-       "      <td>13975</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>بعض</td>\n",
-       "      <td>13965</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>ومن</td>\n",
-       "      <td>13860</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>يمكن</td>\n",
-       "      <td>13810</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>فيها</td>\n",
-       "      <td>13775</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>وفي</td>\n",
-       "      <td>13492</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      word  frequency\n",
-       "0       في     356927\n",
-       "1       من     286652\n",
-       "2      على     172219\n",
-       "3       أن     146083\n",
-       "4      إلى      99920\n",
-       "5     التي      80677\n",
-       "6       عن      67941\n",
-       "7       لا      65888\n",
-       "8       ما      65712\n",
-       "9       أو      54998\n",
-       "10      مع      54531\n",
-       "11    الذي      52694\n",
-       "12     هذا      45318\n",
-       "13     هذه      38376\n",
-       "14     كان      37159\n",
-       "15      لم      33351\n",
-       "16      كل      33264\n",
-       "17     ذلك      31759\n",
-       "18      هو      31138\n",
-       "19     بين      30919\n",
-       "20     بعد      26840\n",
-       "21      فى      23190\n",
-       "22    كانت      21786\n",
-       "23     ولا      21714\n",
-       "24  العالم      21173\n",
-       "25     كما      20831\n",
-       "26     حتى      19547\n",
-       "27     غير      18547\n",
-       "28     قبل      17967\n",
-       "29    الله      17652\n",
-       "30      أي      17587\n",
-       "31      هي      17029\n",
-       "32      قد      16971\n",
-       "33     وهو      16925\n",
-       "34   إيران      16193\n",
-       "35    خلال      16113\n",
-       "36      إن      16059\n",
-       "37     أنه      15933\n",
-       "38     تلك      15435\n",
-       "39    أكثر      15398\n",
-       "40      بل      15142\n",
-       "41     عام      14195\n",
-       "42      له      14122\n",
-       "43     لكن      13986\n",
-       "44     إلا      13975\n",
-       "45     بعض      13965\n",
-       "46     ومن      13860\n",
-       "47    يمكن      13810\n",
-       "48    فيها      13775\n",
-       "49     وفي      13492"
-      ]
-     },
-     "execution_count": 145,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "wordsFrequency = pd.DataFrame(Counter(words[0]).most_common(50), columns=['word', 'frequency'])\n",
-    "wordsFrequency"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "9d89bacd",
+   "id": "886a189f",
    "metadata": {},
    "source": [
     "### Step 1: Word Frequency Calculation"
@@ -748,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "e3b0a79f",
+   "id": "1c1e8174",
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +747,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83e77323",
+   "id": "215eb93c",
    "metadata": {},
    "source": [
     "### Step 2: Mean and variance Calculation"
@@ -1106,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "0dd013f7",
+   "id": "75bd3040",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "7e4b4656",
+   "id": "0765ef5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1169,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": 250,
-   "id": "ada0737b",
+   "id": "ada163e3",
    "metadata": {},
    "outputs": [
     {
@@ -1989,7 +1639,7 @@
   {
    "cell_type": "code",
    "execution_count": 251,
-   "id": "5b093841",
+   "id": "7fb060e2",
    "metadata": {},
    "outputs": [
     {
@@ -2010,7 +1660,7 @@
   {
    "cell_type": "code",
    "execution_count": 252,
-   "id": "e61ec3a6",
+   "id": "07305fbf",
    "metadata": {},
    "outputs": [
     {
@@ -2829,7 +2479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8457c86b",
+   "id": "bd10b416",
    "metadata": {},
    "source": [
     "#### Calculate Mean of Probability (MP)"
@@ -2838,7 +2488,7 @@
   {
    "cell_type": "code",
    "execution_count": 253,
-   "id": "f6b08f2c",
+   "id": "c19c3f23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2848,7 +2498,7 @@
   {
    "cell_type": "code",
    "execution_count": 257,
-   "id": "81f4b53a",
+   "id": "c3b5b846",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2864,7 +2514,7 @@
   {
    "cell_type": "code",
    "execution_count": 258,
-   "id": "dea801d6",
+   "id": "8a0d87eb",
    "metadata": {},
    "outputs": [
     {
@@ -2933,7 +2583,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "922758b5",
+   "id": "d0522e38",
    "metadata": {},
    "source": [
     "#### Calculate Variance of Probability (VP)"
@@ -2941,40 +2591,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
-   "id": "32062312",
+   "execution_count": 265,
+   "id": "dec4cb8c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2298738"
+      ]
+     },
+     "execution_count": 265,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Pij_dash = FreqOfWordInDocs\n",
-    "VP = dict()"
+    "totalWordsInAllDocs = 0\n",
+    "for i in range(wordsFrequency.shape[0]):\n",
+    "    totalWordsInAllDocs += wordsFrequency.frequency[i]\n",
+    "totalWordsInAllDocs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "02388e00",
+   "execution_count": 268,
+   "id": "cf21c237",
    "metadata": {},
    "outputs": [],
    "source": [
+    "VP = dict()\n",
     "for i in range(wordsFrequency.shape[0]):\n",
     "    key = wordsFrequency.word[i]\n",
-    "    MP[key] = 0\n",
+    "    VP[key] = 0\n",
     "    for j in range(file_number):\n",
     "        if key in propOfWordInDocs[j]:\n",
-    "            MP[key] += propOfWordInDocs[j][key]\n",
-    "    MP[key] /= file_number"
+    "            VP[key] += (propOfWordInDocs[j][key] - MP[key])\n",
+    "    VP[key] = VP[key] ** 2    \n",
+    "    VP[key] /= file_number"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "569c5fa6",
+   "execution_count": 269,
+   "id": "16dcd070",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'في': 7.800016274768305e-33,\n",
+       " 'من': 3.851859888774472e-34,\n",
+       " 'على': 0.0,\n",
+       " 'أن': 0.0,\n",
+       " 'إلى': 7.2824226022142356e-34,\n",
+       " 'التي': 6.018531076210112e-36,\n",
+       " 'عن': 2.407412430484045e-35,\n",
+       " 'لا': 9.62964972193618e-35,\n",
+       " 'ما': 9.62964972193618e-35,\n",
+       " 'أو': 2.1666711874356403e-34,\n",
+       " 'مع': 9.62964972193618e-35,\n",
+       " 'الذي': 6.018531076210112e-36,\n",
+       " 'هذا': 6.018531076210112e-36,\n",
+       " 'هذه': 0.0,\n",
+       " 'كان': 7.372700568357387e-35,\n",
+       " 'لم': 9.62964972193618e-35,\n",
+       " 'كل': 3.046881357331369e-35,\n",
+       " 'ذلك': 1.2187525429325477e-34,\n",
+       " 'هو': 1.8431751420893468e-35,\n",
+       " 'بين': 1.3541694921472752e-35,\n",
+       " 'بعد': 5.416677968589101e-35,\n",
+       " 'فى': 0.0007418153248409621,\n",
+       " 'كانت': 9.4039548065783e-36,\n",
+       " 'ولا': 1.504632769052528e-36,\n",
+       " 'العالم': 3.385423730368188e-36,\n",
+       " 'كما': 6.018531076210112e-36,\n",
+       " 'حتى': 1.8431751420893468e-35,\n",
+       " 'غير': 0.0,\n",
+       " 'قبل': 5.416677968589101e-35,\n",
+       " 'الله': 7.59979506501677e-05,\n",
+       " 'أي': 2.407412430484045e-35,\n",
+       " 'هي': 1.504632769052528e-36,\n",
+       " 'قد': 2.0583730090233234e-05,\n",
+       " 'وهو': 3.76158192263132e-35,\n",
+       " 'إيران': 6.16502214123789e-05,\n",
+       " 'خلال': 9.4039548065783e-36,\n",
+       " 'إن': 0.0,\n",
+       " 'أنه': 3.385423730368188e-36,\n",
+       " 'تلك': 1.8431751420893468e-35,\n",
+       " 'أكثر': 9.4039548065783e-36,\n",
+       " 'بل': 6.018531076210112e-36,\n",
+       " 'عام': 3.385423730368188e-36,\n",
+       " 'له': 0.0,\n",
+       " 'لكن': 3.76158192263132e-37,\n",
+       " 'إلا': 1.4387396446802707e-05,\n",
+       " 'بعض': 1.8431751420893468e-35,\n",
+       " 'ومن': 1.504632769052528e-36,\n",
+       " 'يمكن': 1.1378785315959743e-35,\n",
+       " 'فيها': 6.018531076210112e-36,\n",
+       " 'وفي': 1.2179002777260841e-05}"
+      ]
+     },
+     "execution_count": 269,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "VP"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8bd9a13",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc21639b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
