--- a/nltk-stop-words/statistical-method.ipynb
+++ b/nltk-stop-words/statistical-method.ipynb
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adced871",
+   "id": "f3766198",
    "metadata": {},
    "source": [
     "#### Cleaning"
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 410,
-   "id": "1fa2d605",
+   "id": "8b28f099",
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 422,
-   "id": "aa3516f5",
+   "id": "3a0384f3",
    "metadata": {},
    "outputs": [
     {
@@ -1730,7 +1730,7 @@
   {
    "cell_type": "code",
    "execution_count": 532,
-   "id": "9db87fd6",
+   "id": "c6ab3826",
    "metadata": {},
    "outputs": [
     {
@@ -1758,7 +1758,7 @@
   {
    "cell_type": "code",
    "execution_count": 533,
-   "id": "4c7f11d3",
+   "id": "35783d2b",
    "metadata": {},
    "outputs": [
     {
@@ -2039,7 +2039,7 @@
   {
    "cell_type": "code",
    "execution_count": 534,
-   "id": "42c6ffed",
+   "id": "890d35ed",
    "metadata": {},
    "outputs": [
     {
@@ -2327,7 +2327,7 @@
   {
    "cell_type": "code",
    "execution_count": 535,
-   "id": "8ae1fd36",
+   "id": "50175a4b",
    "metadata": {},
    "outputs": [
     {
@@ -2445,7 +2445,7 @@
   {
    "cell_type": "code",
    "execution_count": 539,
-   "id": "c9b5c42b",
+   "id": "0f42f28b",
    "metadata": {},
    "outputs": [
     {
@@ -2511,7 +2511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b1b0371",
+   "id": "874452c3",
    "metadata": {},
    "source": [
     "### Step 3: Entropy Calculation"
@@ -2520,7 +2520,7 @@
   {
    "cell_type": "code",
    "execution_count": 541,
-   "id": "93bda0cb",
+   "id": "878aedc4",
    "metadata": {},
    "outputs": [
     {
@@ -2541,7 +2541,7 @@
   {
    "cell_type": "code",
    "execution_count": 542,
-   "id": "5a548ea1",
+   "id": "8d59365c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2551,7 +2551,7 @@
   {
    "cell_type": "code",
    "execution_count": 567,
-   "id": "2af55dc5",
+   "id": "69ca6420",
    "metadata": {},
    "outputs": [
     {
@@ -2596,16 +2596,266 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b179235",
+   "id": "48ca0737",
    "metadata": {},
    "source": [
     "### Step 4: Aggregation"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b1b156be",
+   "metadata": {},
+   "source": [
+    "#### apply Borda ranking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 577,
+   "id": "09f40c11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 20\n",
+    "RANK = dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 578,
+   "id": "307c9177",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'في': 20,\n",
+       " 'من': 19,\n",
+       " 'على': 18,\n",
+       " 'أن': 17,\n",
+       " 'إلى': 16,\n",
+       " 'التي': 15,\n",
+       " 'لا': 14,\n",
+       " 'ما': 13,\n",
+       " 'عن': 12,\n",
+       " 'الذي': 11,\n",
+       " 'مع': 10,\n",
+       " 'أو': 9,\n",
+       " 'هذا': 8,\n",
+       " 'كان': 7,\n",
+       " 'هذه': 6,\n",
+       " 'لم': 5,\n",
+       " 'ذلك': 4,\n",
+       " 'هو': 3,\n",
+       " 'بين': 2,\n",
+       " 'بعد': 1}"
+      ]
+     },
+     "execution_count": 578,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for key in series_MP.keys():\n",
+    "    RANK[key]=n\n",
+    "    n-=1\n",
+    "RANK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 579,
+   "id": "7b0690b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'في': 40,\n",
+       " 'من': 38,\n",
+       " 'على': 35,\n",
+       " 'أن': 33,\n",
+       " 'إلى': 34,\n",
+       " 'التي': 28,\n",
+       " 'لا': 29,\n",
+       " 'ما': 27,\n",
+       " 'عن': 20,\n",
+       " 'الذي': 22,\n",
+       " 'مع': 20,\n",
+       " 'أو': 21,\n",
+       " 'هذا': 11,\n",
+       " 'كان': 16,\n",
+       " 'هذه': 11,\n",
+       " 'لم': 12,\n",
+       " 'ذلك': 6,\n",
+       " 'هو': 9,\n",
+       " 'بين': 6,\n",
+       " 'بعد': 2}"
+      ]
+     },
+     "execution_count": 579,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 20\n",
+    "for key in series_VP.keys():\n",
+    "    RANK[key]+=n\n",
+    "    n-=1\n",
+    "RANK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 580,
+   "id": "4ef1bd3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'في': 54,\n",
+       " 'من': 58,\n",
+       " 'على': 50,\n",
+       " 'أن': 46,\n",
+       " 'إلى': 36,\n",
+       " 'التي': 44,\n",
+       " 'لا': 35,\n",
+       " 'ما': 37,\n",
+       " 'عن': 38,\n",
+       " 'الذي': 30,\n",
+       " 'مع': 29,\n",
+       " 'أو': 26,\n",
+       " 'هذا': 28,\n",
+       " 'كان': 17,\n",
+       " 'هذه': 23,\n",
+       " 'لم': 15,\n",
+       " 'ذلك': 17,\n",
+       " 'هو': 13,\n",
+       " 'بين': 13,\n",
+       " 'بعد': 21}"
+      ]
+     },
+     "execution_count": 580,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 20\n",
+    "for key in ENTRPOY.keys():\n",
+    "    RANK[key]+=n\n",
+    "    n-=1\n",
+    "RANK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 581,
+   "id": "5794d640",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'من': 58,\n",
+       " 'في': 54,\n",
+       " 'على': 50,\n",
+       " 'أن': 46,\n",
+       " 'التي': 44,\n",
+       " 'عن': 38,\n",
+       " 'ما': 37,\n",
+       " 'إلى': 36,\n",
+       " 'لا': 35,\n",
+       " 'الذي': 30,\n",
+       " 'مع': 29,\n",
+       " 'هذا': 28,\n",
+       " 'أو': 26,\n",
+       " 'هذه': 23,\n",
+       " 'بعد': 21,\n",
+       " 'كان': 17,\n",
+       " 'ذلك': 17,\n",
+       " 'لم': 15,\n",
+       " 'هو': 13,\n",
+       " 'بين': 13}"
+      ]
+     },
+     "execution_count": 581,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#sorting\n",
+    "RANK = dict(sorted(RANK.items(), key=lambda item: item[1], reverse=True))\n",
+    "RANK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 591,
+   "id": "9b4e17f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RANK_keys = list(RANK.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 597,
+   "id": "f453cbab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "top 20 Arabic words after applying \"Borda\" ranking:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['من',\n",
+       " 'في',\n",
+       " 'على',\n",
+       " 'أن',\n",
+       " 'التي',\n",
+       " 'عن',\n",
+       " 'ما',\n",
+       " 'إلى',\n",
+       " 'لا',\n",
+       " 'الذي',\n",
+       " 'مع',\n",
+       " 'هذا',\n",
+       " 'أو',\n",
+       " 'هذه',\n",
+       " 'بعد',\n",
+       " 'كان',\n",
+       " 'ذلك',\n",
+       " 'لم',\n",
+       " 'هو',\n",
+       " 'بين']"
+      ]
+     },
+     "execution_count": 597,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"top 20 Arabic words after applying \\\"Borda\\\" ranking:\")\n",
+    "RANK_keys"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37ca1c4b",
+   "id": "eb275b40",
    "metadata": {},
    "outputs": [],
    "source": []
