--- a/Embedding_Demo.ipynb
+++ b/Embedding_Demo.ipynb
@@ -14,6 +14,7 @@
    "outputs": [],
    "source": [
     "import gensim\n",
+    "from gensim.models import KeyedVectors\n",
     "import zipfile\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "marine-leader",
    "metadata": {},
    "outputs": [
@@ -106,16 +107,15 @@
       "Word Similarity (MSE):  0.2602355396083907\n",
       "Concept Categorization (purity):  0.31052141527001864\n",
       "Epoch 1/5\n",
-      "177/177 [==============================] - 18s 65ms/step - loss: 0.6013 - accuracy: 0.6735 - val_loss: 0.5350 - val_accuracy: 0.7295\n",
+      "177/177 [==============================] - 36s 177ms/step - loss: 0.6071 - accuracy: 0.6642 - val_loss: 0.5384 - val_accuracy: 0.7236\n",
       "Epoch 2/5\n",
-      "177/177 [==============================] - 11s 60ms/step - loss: 0.4576 - accuracy: 0.7860 - val_loss: 0.5098 - val_accuracy: 0.7482\n",
+      "177/177 [==============================] - 30s 171ms/step - loss: 0.4509 - accuracy: 0.7889 - val_loss: 0.4882 - val_accuracy: 0.7552\n",
       "Epoch 3/5\n",
-      "177/177 [==============================] - 11s 60ms/step - loss: 0.3237 - accuracy: 0.8598 - val_loss: 0.5280 - val_accuracy: 0.7564\n",
+      "177/177 [==============================] - 30s 170ms/step - loss: 0.3082 - accuracy: 0.8682 - val_loss: 0.5390 - val_accuracy: 0.7591\n",
       "Epoch 4/5\n",
-      "177/177 [==============================] - 11s 60ms/step - loss: 0.2050 - accuracy: 0.9157 - val_loss: 0.6900 - val_accuracy: 0.7560\n",
+      "177/177 [==============================] - 164s 929ms/step - loss: 0.1897 - accuracy: 0.9244 - val_loss: 0.6641 - val_accuracy: 0.7563\n",
       "Epoch 5/5\n",
-      "177/177 [==============================] - 11s 61ms/step - loss: 0.1179 - accuracy: 0.9563 - val_loss: 0.7919 - val_accuracy: 0.7513\n",
-      "Sentiment Analysis (acc):  0.7513472921636187\n"
+      "177/177 [==============================] - 29s 165ms/step - loss: 0.1096 - accuracy: 0.9587 - val_loss: 0.8059 - val_accuracy: 0.7521\n"
      ]
     }
    ],
@@ -131,18 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "41c23575-80b2-49af-a9b5-1eb3b3d210c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with zipfile.ZipFile(\"pretrained/mottagah.zip\", 'r') as zipf:\n",
-    "    zipf.extractall(\"pretrained/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "ae805dbb-12fd-43f3-a95b-49189ccabc3c",
    "metadata": {},
    "outputs": [
@@ -152,27 +141,48 @@
      "text": [
       "Word Analogy (acc):  0.13043478260869565\n",
       "Word Similarity (MSE):  0.3292717506104365\n",
-      "Concept Categorization) (purity):  0.313780260707635\n",
+      "Concept Categorization (purity):  0.313780260707635\n",
       "Epoch 1/5\n",
-      "177/177 [==============================] - 39s 180ms/step - loss: 0.6015 - accuracy: 0.6657 - val_loss: 0.5314 - val_accuracy: 0.7234\n",
+      "177/177 [==============================] - 60s 311ms/step - loss: 0.5925 - accuracy: 0.6743 - val_loss: 0.5210 - val_accuracy: 0.7293\n",
       "Epoch 2/5\n",
-      "177/177 [==============================] - 31s 173ms/step - loss: 0.4047 - accuracy: 0.8157 - val_loss: 0.5122 - val_accuracy: 0.7537\n",
+      "177/177 [==============================] - 53s 297ms/step - loss: 0.3955 - accuracy: 0.8192 - val_loss: 0.5108 - val_accuracy: 0.7382\n",
       "Epoch 3/5\n",
-      "177/177 [==============================] - 30s 172ms/step - loss: 0.1996 - accuracy: 0.9214 - val_loss: 0.6474 - val_accuracy: 0.7431\n",
+      "177/177 [==============================] - 52s 294ms/step - loss: 0.2063 - accuracy: 0.9188 - val_loss: 0.6780 - val_accuracy: 0.7404\n",
       "Epoch 4/5\n",
-      "177/177 [==============================] - 31s 173ms/step - loss: 0.1093 - accuracy: 0.9602 - val_loss: 0.7887 - val_accuracy: 0.7452\n",
+      "177/177 [==============================] - 52s 293ms/step - loss: 0.1127 - accuracy: 0.9578 - val_loss: 0.8158 - val_accuracy: 0.7401\n",
       "Epoch 5/5\n",
-      "177/177 [==============================] - 31s 177ms/step - loss: 0.0667 - accuracy: 0.9754 - val_loss: 0.9223 - val_accuracy: 0.7438\n",
-      "Sentiment Analysis (acc):  0.7437936213446418\n"
+      "177/177 [==============================] - 52s 292ms/step - loss: 0.0688 - accuracy: 0.9747 - val_loss: 0.9316 - val_accuracy: 0.7397\n",
+      "Sentiment Analysis (acc):  0.7396854845834437\n"
      ]
     }
    ],
    "source": [
-    "model = gensim.models.Word2Vec.load(\"pretrained/mottagah/mottagah\")\n",
+    "model = KeyedVectors.load(\"pretrained/mottagah_wv.wordvectors\", mmap='r')\n",
     "\n",
-    "embeddings_index = helper.get_embedding_matrix(model)\n",
+    "embeddings_index = helper.get_embedding_matrix(model, vector_file=True)\n",
     "wevaluator = evaluator(embeddings_index, preprocess, 300)\n",
     "scores = wevaluator.evaluate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "93ebf707-a359-45d0-b91e-eae8768d3fa7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "112164"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(model.index_to_key)"
    ]
   },
   {
@@ -246,6 +256,62 @@
    ],
    "source": [
     "model.wv.most_similar(\"كوفيد\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9be1d642-15fc-4800-93c7-2c2e55a06f4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word Analogy (acc):  0.09420289855072464\n",
+      "Word Similarity (MSE):  0.3051640140786257\n",
+      "Concept Categorization (purity):  0.30353817504655495\n",
+      "Epoch 1/5\n",
+      "177/177 [==============================] - 61s 318ms/step - loss: 0.5898 - accuracy: 0.6731 - val_loss: 0.5123 - val_accuracy: 0.7352\n",
+      "Epoch 2/5\n",
+      "177/177 [==============================] - 55s 311ms/step - loss: 0.3907 - accuracy: 0.8285 - val_loss: 0.5146 - val_accuracy: 0.7503\n",
+      "Epoch 3/5\n",
+      "177/177 [==============================] - 56s 314ms/step - loss: 0.2029 - accuracy: 0.9216 - val_loss: 0.6750 - val_accuracy: 0.7508\n",
+      "Epoch 4/5\n",
+      "177/177 [==============================] - 54s 308ms/step - loss: 0.1015 - accuracy: 0.9647 - val_loss: 0.7944 - val_accuracy: 0.7486\n",
+      "Epoch 5/5\n",
+      "177/177 [==============================] - 55s 312ms/step - loss: 0.0902 - accuracy: 0.9681 - val_loss: 0.8438 - val_accuracy: 0.7483\n",
+      "Sentiment Analysis (acc):  0.7483434932414524\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = KeyedVectors.load(\"pretrained/mottagah_large_wv.wordvectors\", mmap='r')\n",
+    "\n",
+    "embeddings_index = helper.get_embedding_matrix(model, vector_file=True)\n",
+    "wevaluator = evaluator(embeddings_index, preprocess, 300)\n",
+    "scores = wevaluator.evaluate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0eb5aef6-0024-481d-997e-cc9801fd6dee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "571460"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(model.index_to_key)"
    ]
   },
   {
