--- a/Word_Embedding/Embedding_Demo.ipynb
+++ b/Word_Embedding/Embedding_Demo.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "marine-leader",
    "metadata": {},
    "outputs": [
@@ -107,21 +107,22 @@
       "Word Similarity (MSE):  0.2602355396083907\n",
       "Concept Categorization (purity):  0.31052141527001864\n",
       "Epoch 1/5\n",
-      "177/177 [==============================] - 36s 177ms/step - loss: 0.6071 - accuracy: 0.6642 - val_loss: 0.5384 - val_accuracy: 0.7236\n",
+      "177/177 [==============================] - 203s 1s/step - loss: 0.6014 - accuracy: 0.6724 - val_loss: 0.5328 - val_accuracy: 0.7299\n",
       "Epoch 2/5\n",
-      "177/177 [==============================] - 30s 171ms/step - loss: 0.4509 - accuracy: 0.7889 - val_loss: 0.4882 - val_accuracy: 0.7552\n",
+      "177/177 [==============================] - 11s 60ms/step - loss: 0.4621 - accuracy: 0.7892 - val_loss: 0.5124 - val_accuracy: 0.7505\n",
       "Epoch 3/5\n",
-      "177/177 [==============================] - 30s 170ms/step - loss: 0.3082 - accuracy: 0.8682 - val_loss: 0.5390 - val_accuracy: 0.7591\n",
+      "177/177 [==============================] - 11s 61ms/step - loss: 0.3288 - accuracy: 0.8617 - val_loss: 0.5239 - val_accuracy: 0.7531\n",
       "Epoch 4/5\n",
-      "177/177 [==============================] - 164s 929ms/step - loss: 0.1897 - accuracy: 0.9244 - val_loss: 0.6641 - val_accuracy: 0.7563\n",
+      "177/177 [==============================] - 11s 60ms/step - loss: 0.2086 - accuracy: 0.9189 - val_loss: 0.6468 - val_accuracy: 0.7571\n",
       "Epoch 5/5\n",
-      "177/177 [==============================] - 29s 165ms/step - loss: 0.1096 - accuracy: 0.9587 - val_loss: 0.8059 - val_accuracy: 0.7521\n"
+      "177/177 [==============================] - 11s 60ms/step - loss: 0.1233 - accuracy: 0.9571 - val_loss: 0.7718 - val_accuracy: 0.7569\n",
+      "Sentiment Analysis (acc):  0.7569131548723386\n"
      ]
     }
    ],
    "source": [
     "aravec = AraVec()\n",
-    "model_path = aravec.get_model(\"Twitter_SkipGram_100\", unzip=True)\n",
+    "model_path = aravec.get_model(\"Ngram_Twitter_SkipGram_100\", unzip=True)\n",
     "model = aravec.load_model(model_path)\n",
     "\n",
     "embeddings_index = helper.get_embedding_matrix(model)\n",
